# Mnemo

./: .env.example  .env.server  .gitignore  FIXES_APPLIED.md  README.md  TODO.md  deploy-server-optimized.sh  docker-compose.server.yml  docker-compose.yml  start-local.sh  test-local-setup.sh
ai-inference/: CMakeLists.txt  Dockerfile
ai-inference/src/: main.cpp  narrative_ai.cpp  reconciler.cpp  relevance_ai.cpp
browser-extension/: README.md  background.js  manifest.json  options.html  options.js  popup.html  popup.js
database/: init_db.sh  schema.cql  schema.sql
docs/: youtube-cookies-guide.md
frame-processing/: Cargo.toml  Dockerfile
frame-processing/src/: lib.rs  main.rs
frame-processing/src/compression/: mod.rs
frame-processing/src/frame_gapper/: mod.rs
frame-processing/src/subabstraction/: mod.rs
models/exported/: narrative_v1.pt  relevance_v1.pt
models/training/: requirements.txt  train_narrative.py  train_relevance.py
monitoring/prometheus/: prometheus.yml
motion-extractor/: Dockerfile  motion_extractor.py
orchestrator/: Dockerfile  go.mod  go.sum
orchestrator/cmd/orchestrator/: main.go
orchestrator/internal/api/: handlers.go
orchestrator/internal/database/: database.go
proto/: communication.capnp  gapper.capnp  memory.capnp
scripts/: deploy-server-podman.sh  deploy-server.sh  extract-youtube-cookies.ps1  test-motion.py
worker/: Dockerfile  video_processor.py
