[package]
name = "frame-processing"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
image = "0.24"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
capnp = "0.18"
capnpc = "0.18"
tonic = "0.10"
prost = "0.12"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
bytes = "1.5"
# opencv = "0.88"  # TODO: Add back with proper system deps
num_cpus = "1.16"
arc-swap = "1.6"

[build-dependencies]
capnpc = "0.18"
tonic-build = "0.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0